option('enable-benchmark', type : 'boolean', value : false, description : 'Enable benchmark')
option('disable-internal-asserts', type : 'boolean', value : false, description : 'Disables the internal asserts')
option('enable-consistency-check', type : 'boolean', value : false, description : 'Enables (very) expensive consistency checks. It might affect the asymptotic performance.')
